# wd-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  challenge.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: devops.yml
app/: celery_worker.py  config.py  db.py  main.py  models.py
app/notifiers/: base.py  email_notifier.py  sms_notifier.py
app/routes/: alerts.py  notifications.py  preferences.py
app/services/: email_sender.py  sms_sender.py
app/tasks/: notification_tasks.py
app/tests/unit/: conftest.py
app/utils/: logger.py
tests/integration/: conftest.py  test_notifications.py  test_preferences.py
tests/unit/: conftest.py  test_notifications.py  test_preferences.py
